src/App.css
body {
  margin: 0;
  padding: 0;
  color: white;
  box-sizing: border-box;
  font-family: 'Courier New';
}
a{
  text-align: center;
  font-size: 1.5rem;
  display: grid;
  gap: 1rem;
  width: 100%;
  max-width: 1200px;
  justify-content: center;
  margin: 0 ;
  line-height: 1.5;
}

.app-wrapper {
  display: flex;
  flex-direction: column;
  background-color: #1b5e5d;
  align-items: center;
  width: 100%;
  min-height: 100vh;
  box-sizing: border-box;
  padding: 1rem; /* inner margin */
}


.grid-container {
  display: grid;
  gap: 1rem;
  width: 100%;
  max-width: 1200px;
  justify-content: center;
  margin: 0 ;
}

@media (min-width: 1201px) {
  .grid-container {
    grid-template-columns: repeat(4, 1fr); /* 4 col */
    grid-template-rows: repeat(6, auto);   /* 6 row */
    padding-top: 5rem;
    padding-bottom: 5rem;
  }
}

@media (min-width: 769px) and (max-width: 1200px) {
  .grid-container {
    grid-template-columns: repeat(3, 1fr); /* fix 3 col*/
    grid-template-rows: repeat(8, auto);   /* fix 8 raw */
    padding: 0.5rem;
  }
}


@media (max-width: 768px) {
  a{
    font-size: 1rem;
  }
  .grid-container {
    grid-template-columns: repeat(3, 1fr); /* fix 3 col*/
    grid-template-rows: repeat(8, auto);   /* fix 8 raw */
    padding: 0.5rem;
  }
}

